# Sophus

./: .appveyor.yml  .buildinfo  .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Cargo.toml  FindEigen3.cmake  LICENSE.txt  Makefile  README  README.md  README.rst  Sophus.code-workspace  SophusConfig.cmake.in  appveyor.yml  class_Eigen_Map-10.html  class_Eigen_Map-11.html  class_Eigen_Map-12.html  class_Eigen_Map-13.html  class_Eigen_Map-14.html  class_Eigen_Map-15.html  class_Eigen_Map-16.html  class_Eigen_Map-17.html  class_Eigen_Map-18.html  class_Eigen_Map-2.html  class_Eigen_Map-3.html  class_Eigen_Map-4.html  class_Eigen_Map-5.html  class_Eigen_Map-6.html  class_Eigen_Map-7.html  class_Eigen_Map-8.html  class_Eigen_Map-9.html  class_Eigen_Map.html  class_sophus_AffineTransform.html  class_sophus_BasisSpline.html  class_sophus_BasisSplineFn.html  (+123 more)
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  run_clang_tidy.sh
cpp/examples/test_install_targets/: CMakeLists.txt  compile_all_proto.cpp  hello_se3.cpp  hello_so3.cpp  image_sensor.cpp
cpp/sophus/: CMakeLists.txt
cpp/sophus/calculus/: CMakeLists.txt  interval.h  interval_test.cpp  num_diff.h  region.h  region_test.cpp
cpp/sophus/ceres/: CMakeLists.txt  ceres_test.cpp  jet_helpers.h  manifold.h  manifold_test.cpp  rxso2_test.cpp  rxso3_test.cpp  se2_test.cpp  se3_test.cpp  sim2_test.cpp  sim3_test.cpp  so2_test.cpp  so3_test.cpp  typetraits.h
cpp/sophus/common/: CMakeLists.txt  cast.h  common.h  common_test.cpp  concept_utils.h  eigen_concepts.h  eigen_scalar_method.h  enum.h  multi_dim_limits.h  point_concepts.h  point_methods.h  point_traits.h  reduce.h  test_macros.h  types.h
cpp/sophus/concepts/: CMakeLists.txt  division_ring.h  division_ring_prop_tests.h  group_accessors.h  group_accessors_test.cpp  group_accessors_unit_tests.h  image.h  image_test.cpp  lie_group.h  lie_group_prop_tests.h  lie_group_test.cpp  manifold.h  manifold_prop_tests.h  manifold_test.cpp  params.h  params_test.cpp  point.h  point_test.cpp  utils.h  utils_test.cpp
cpp/sophus/core/: test_macros.h  types.h
cpp/sophus/experimental/: CMakeLists.txt  least_squares.cpp  least_squares.h  least_squares_test.cpp
cpp/sophus/geometry/: CMakeLists.txt  fit_plane.h  fit_plane_test.cpp  inverse_depth.h  inverse_depth_test.cpp  plane_conv.h  plane_conv_test.cpp  point_transform.h  point_transform_test.cpp  projection.h  projection_test.cpp  ray.h  ray_test.cpp  unit_vector.h  unit_vector_test.cpp
cpp/sophus/image/: CMakeLists.txt  dyn_image.cpp  dyn_image.h  dyn_image_test.cpp  dyn_image_types.cpp  dyn_image_types.h  dyn_image_types_test.cpp  dyn_image_view.cpp  dyn_image_view.h  dyn_image_view_test.cpp  image.cpp  image.h  image_shape.cpp  image_shape.h  image_shape_test.cpp  image_size.cpp  image_size.h  image_size_test.cpp  image_test.cpp  image_types.cpp  image_types.h  image_types_test.cpp  image_view.cpp  image_view.h  image_view_test.cpp  interpolation.cpp  interpolation.h  interpolation_test.cpp  layout.cpp  layout.h  layout_test.cpp  mut_dyn_image.cpp  mut_dyn_image.h  mut_dyn_image_test.cpp  mut_dyn_image_view.cpp  mut_dyn_image_view.h  mut_dyn_image_view_test.cpp  mut_image.cpp  mut_image.h  mut_image_test.cpp  (+21 more)
cpp/sophus/lie/: CMakeLists.txt  cartesian.h  cartesian2_test.cpp  cartesian3_test.cpp  common_test.cpp  group_manifold.h  group_manifold_test.cpp  identity.h  identity_test.cpp  isometry2.h  isometry2_test.cpp  isometry3.h  isometry3_test.cpp  lie_group.h  lie_group_test.cpp  quaternion.h  quaternion_test.cpp  rotation2.h  rotation2_test.cpp  rotation3.h  rotation3_test.cpp  roto_scaling3.h  roto_scaling3_test.cpp  rxso2.h  rxso2_test.cpp  rxso3.h  rxso3_test.cpp  scaling.h  scaling_test.cpp  scaling_translation.h  scaling_translation_test.cpp  se2.h  se2_test.cpp  se3.h  se3_test.cpp  sim2.h  sim2_test.cpp  sim3.h  sim3_test.cpp  similarity2.h  (+13 more)
cpp/sophus/linalg/: CMakeLists.txt  cast.h  cast_test.cpp  complex.h  complex_test.cpp  homogeneous.h  homogeneous_test.cpp  orthogonal.h  orthogonal_test.cpp  point_traits.h  point_traits_test.cpp  quaternion.h  quaternion_test.cpp  reduce.h  reduce_test.cpp  rotation_matrix.h  unit_vector.h  unit_vector_test.cpp  vector_space.h  vector_space_test.cpp  vector_space_traits.h  vector_space_traits_test.cpp
cpp/sophus/manifold/: CMakeLists.txt  complex.h  complex_test.cpp  product_manifold.h  product_manifold_test.cpp  quaternion.h  quaternion_test.cpp  unit_vector.h  unit_vector_test.cpp  vector_manifold.h
cpp/sophus/math/: CMakeLists.txt  num_diff.h  rotation_matrix.h
cpp/sophus/sensor/: CMakeLists.txt  camera_model.cpp  camera_model.h  camera_model_test.cpp  camera_rig.h  clipping_planes.cpp  clipping_planes_test.cpp  imu_model.cpp  imu_model.h  imu_model_test.cpp  orthographic.cpp  orthographic.h  (+1 more)
examples/: CMakeLists.txt  HelloSO3.cpp  custom_ensure_handler.cpp  ensure_example.cpp  hello_so3.cpp
examples/cuda/: CMakeLists.txt  kernel.cu  main.cpp
examples/test_install_targets/: CMakeLists.txt  image_sensor.cpp
python/: CMakeLists.txt  SophusPyBind.h
sophus/ceres/: CMakeLists.txt  jet_helpers.h  manifold.h  rxso2_test.cpp  sim2_test.cpp  sim3_test.cpp  so3_test.cpp
sophus/core/: CMakeLists.txt  common.h
sophus/interp/: CMakeLists.txt  average.h  interpolate.h  spline.h
src/: se3.h  (+5 more)
super_project/: CMakeLists.txt
super_project/cmake/: External_ceres.cmake  External_eigen.cmake  External_expected.cmake  External_farm-ng-core.cmake  farm_ng_default_args.cmake
test/ceres/: CMakeLists.txt  ceres_eigen.hpp  ceres_flags.hpp  local_parameterization_se3.hpp  local_parameterization_so3.hpp  test_ceres_rxso2.cpp  test_ceres_rxso3.cpp  test_ceres_se2.cpp  test_ceres_se3.cpp  test_ceres_sim2.cpp  test_ceres_sim3.cpp  test_ceres_so2.cpp  test_ceres_so3.cpp  tests.hpp
test/core/: CMakeLists.txt  test_cartesian2.cpp  test_cartesian3.cpp  test_common.cpp  test_geometry.cpp  test_rxso2.cpp  test_rxso3.cpp  test_se2.cpp  test_se3.cpp  test_sim2.cpp  test_sim3.cpp  test_so2.cpp  test_so3.cpp  test_velocities.cpp  tests.hpp
(+8144 files in other folders)
