<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>sophus</name>
  <version>0.9.1</version>
  <description>
   C++ implementation of Lie Groups using Eigen.
  </description>
  <url type="repository">https://github.com/stonier/sophus</url>
  <url type="bugtracker">https://github.com/stonier/sophus/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Hauke Strasdat</author>
  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
