[metadata]
name = sophus
version = 2.0.0
description =
    c++ 2d/3d manifold library - only python support for Sophus ProtoBuf
    messages are included in this package so far.
long_description = file: README.md
author = Farm-ng Inc.
author_email = info@farm-ng.com
keywords = robotics, open-source
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.6
setup_requires =
    wheel
    farm-ng-package
install_requires =
    protobuf
    grpcio
tests_require =
    pytest
    pytest-runner
    pytest-mypy
test_suite = tests

package_dir =
    = py
packages =
    sophus

[options.extras_require]
dev =
    pytest==7.1.2
    pytest-mypy==0.9.1
    pre-commit==2.20.0
    mypy==0.971
    types-protobuf
    pylint
    grpcio-tools
    mypy-protobuf
    pylint-protobuf==0.20.2

[mypy]
files = py/sophus, py/tests, py/examples
ignore_missing_imports = True

[options.package_data]
sophus =
    *.proto
